src/qcl.output
Useless nonterminals

   identifier1
   stmt1
   option
   option1
   identifier2


Terminals which are not used

   tokCONSTR
   tokEOL
   tokLETTER
   tokLIST
   tokSET


Useless rules

  109 identifier1: /* empty */
  110            | identifier
  111            | identifier ',' identifier2

  112 stmt1: /* empty */
  113      | stmt
  114      | stmt stmt1

  115 option: tokLETTER
  116       | tokLETTER option1

  117 option1: tokLETTER
  118        | '-'

  119 identifier2: /* empty */


State 70 conflicts: 3 shift/reduce
State 82 conflicts: 3 shift/reduce
State 83 conflicts: 1 shift/reduce
State 86 conflicts: 29 reduce/reduce
State 87 conflicts: 3 shift/reduce
State 148 conflicts: 3 shift/reduce
State 150 conflicts: 3 shift/reduce
State 151 conflicts: 3 shift/reduce
State 153 conflicts: 3 shift/reduce
State 154 conflicts: 16 shift/reduce
State 155 conflicts: 3 shift/reduce
State 156 conflicts: 3 shift/reduce
State 158 conflicts: 3 shift/reduce
State 159 conflicts: 3 shift/reduce
State 160 conflicts: 3 shift/reduce
State 161 conflicts: 3 shift/reduce
State 162 conflicts: 3 shift/reduce
State 163 conflicts: 3 shift/reduce
State 164 conflicts: 3 shift/reduce
State 165 conflicts: 16 shift/reduce
State 166 conflicts: 16 shift/reduce


Grammar

    0 $accept: qcl_input $end

    1 qcl_input: top_symbol tokEOF

    2 top_symbol: stmt
    3           | def
    4           | stmt top_symbol
    5           | def top_symbol
    6           | error '\n'
    7           | error tokEOF

    8 const: '(' const ',' const ')'
    9      | '-' const
   10      | tokCOMPLEX_COORD
   11      | tokCONSTI
   12      | tokTRUE
   13      | tokFALSE
   14      | tokSTRINGCONST
   15      | '(' error ')'
   16      | error

   17 expr: const
   18     | identifier '[' expr ':' expr ']'
   19     | identifier '[' expr tokMULTDOT expr ']'
   20     | identifier '[' expr '\\' expr ']'
   21     | identifier '[' expr ']'
   22     | identifier
   23     | identifier '(' expr1 ')'
   24     | '(' expr ')'
   25     | '#' expr
   26     | expr '^' expr
   27     | '-' expr
   28     | expr '*' expr
   29     | expr '/' expr
   30     | expr tokMOD expr
   31     | expr '+' expr
   32     | expr '-' expr
   33     | expr '&' expr
   34     | expr tokEQ expr
   35     | expr tokNEQ expr
   36     | expr '<' expr
   37     | expr tokLORE expr
   38     | expr '>' expr
   39     | expr tokGORE expr
   40     | tokNOT expr
   41     | expr tokAND expr
   42     | expr tokOR expr
   43     | expr tokXOR expr

   44 expr1: /* empty */
   45      | expr
   46      | expr ',' expr1

   47 identifier: tokID

   48 stmt: '!' identifier '(' expr1 ')' ';'
   49     | identifier '(' expr1 ')' ';'
   50     | identifier '=' expr ';'
   51     | expr tokLEFTARROW expr ';'
   52     | expr tokRIGHTARROW expr ';'
   53     | expr tokBOTHARROW expr ';'
   54     | tokFOR identifier '=' expr tokTO expr tokSTEP expr block
   55     | tokFOR identifier '=' expr tokTO expr block
   56     | tokWHILE expr block
   57     | block tokUNTIL expr ';'
   58     | tokIF expr block tokELSE block
   59     | tokIF expr block
   60     | tokRETURN expr ';'
   61     | tokINPUT identifier ';'
   62     | tokINPUT expr ',' identifier ';'
   63     | tokPRINT expr1 ';'
   64     | tokEXIT expr ';'
   65     | tokEXIT ';'
   66     | tokMEASURE expr ';'
   67     | tokMEASURE expr ',' identifier ';'
   68     | tokRESET ';'
   69     | tokDUMP ';'
   70     | tokDUMP expr ';'
   71     | tokLOAD ';'
   72     | tokLOAD expr ';'
   73     | tokSAVE ';'
   74     | tokSAVE expr ';'
   75     | tokSHELL ';'
   76     | stmt ";"

   77 type: tokBOOLEAN
   78     | tokINT
   79     | tokREAL
   80     | tokCOMPLEX
   81     | tokSTRING
   82     | tokQUREG
   83     | tokQUVOID
   84     | tokQUCONST
   85     | tokQUSCRATCH

   86 const_def: tokCONST identifier '=' expr ';'

   87 var_def: type identifier '[' expr ']' ';'
   88        | type identifier '=' expr ';'
   89        | type identifier ';'

   90 arg_def: type identifier

   91 arg_def1: arg_def ',' arg_def1
   92         | arg_def
   93         | /* empty */

   94 arg_list: '(' arg_def1 ')'
   95         | '(' error ')'

   96 body: '{' top_symbol '}'
   97     | '{' '}'

   98 def: const_def
   99    | var_def
  100    | type identifier arg_list body
  101    | tokPROCEDURE identifier arg_list body
  102    | tokOPERATOR identifier arg_list body
  103    | tokQUFUNCT identifier arg_list body
  104    | tokEXTERN tokOPERATOR identifier arg_list
  105    | tokEXTERN tokQUFUNCT identifier arg_list

  106 block: '{' block1 '}'

  107 block1: stmt
  108       | stmt block1


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 6
'!' (33) 48
'#' (35) 25
'&' (38) 33
'(' (40) 8 15 23 24 48 49 94 95
')' (41) 8 15 23 24 48 49 94 95
'*' (42) 28
'+' (43) 31
',' (44) 8 46 62 67 91
'-' (45) 9 27 32
'/' (47) 29
':' (58) 18
';' (59) 48 49 50 51 52 53 57 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 86 87 88 89
'<' (60) 36
'=' (61) 50 54 55 86 88
'>' (62) 38
'[' (91) 18 19 20 21 87
'\\' (92) 20
']' (93) 18 19 20 21 87
'^' (94) 26
'{' (123) 96 97 106
'}' (125) 96 97 106
error (256) 6 7 15 16 95
tokAND (258) 41
tokBOOLEAN (259) 77
tokBOTHARROW (260) 53
tokCOMPLEX (261) 80
tokCOMPLEX_COORD (262) 10
tokCONST (263) 86
tokCONSTI (264) 11
tokCONSTR (265)
tokDUMP (266) 69 70
tokELSE (267) 58
tokEOF (268) 1 7
tokEOL (269)
tokEQ (270) 34
tokEXIT (271) 64 65
tokEXTERN (272) 104 105
tokFALSE (273) 13
tokFOR (274) 54 55
tokGORE (275) 39
tokID (276) 47
tokIF (277) 58 59
tokINPUT (278) 61 62
tokINT (279) 78
tokLEFTARROW (280) 51
tokLETTER (281)
tokLIST (282)
tokLOAD (283) 71 72
tokLORE (284) 37
tokMEASURE (285) 66 67
tokMOD (286) 30
tokMULTDOT (287) 19
tokNEQ (288) 35
tokNOT (289) 40
tokOPERATOR (290) 102 104
tokOR (291) 42
tokPRINT (292) 63
tokPROCEDURE (293) 101
tokQUCONST (294) 84
tokQUFUNCT (295) 103 105
tokQUREG (296) 82
tokQUSCRATCH (297) 85
tokQUVOID (298) 83
tokREAL (299) 79
tokRESET (300) 68
tokRETURN (301) 60
tokRIGHTARROW (302) 52
tokSAVE (303) 73 74
tokSET (304)
tokSHELL (305) 75
tokSTEP (306) 54
tokSTRING (307) 81
tokSTRINGCONST (308) 14
tokTO (309) 54 55
tokTRUE (310) 12
tokUNTIL (311) 57
tokWHILE (312) 56
tokXOR (313) 43
UMINUS (314)
";" (315) 76


Nonterminals, with rules where they appear

$accept (83)
    on left: 0
qcl_input (84)
    on left: 1, on right: 0
top_symbol (85)
    on left: 2 3 4 5 6 7, on right: 1 4 5 96
const (86)
    on left: 8 9 10 11 12 13 14 15 16, on right: 8 9 17
expr (87)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43, on right: 18 19 20 21 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 45 46 50 51 52 53
    54 55 56 57 58 59 60 62 64 66 67 70 72 74 86 87 88
expr1 (88)
    on left: 44 45 46, on right: 23 46 48 49 63
identifier (89)
    on left: 47, on right: 18 19 20 21 22 23 48 49 50 54 55 61 62 67
    86 87 88 89 90 100 101 102 103 104 105
stmt (90)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76, on right: 2 4 76 107 108
type (91)
    on left: 77 78 79 80 81 82 83 84 85, on right: 87 88 89 90 100
const_def (92)
    on left: 86, on right: 98
var_def (93)
    on left: 87 88 89, on right: 99
arg_def (94)
    on left: 90, on right: 91 92
arg_def1 (95)
    on left: 91 92 93, on right: 91 94
arg_list (96)
    on left: 94 95, on right: 100 101 102 103 104 105
body (97)
    on left: 96 97, on right: 100 101 102 103
def (98)
    on left: 98 99 100 101 102 103 104 105, on right: 3 5
block (99)
    on left: 106, on right: 54 55 56 57 58 59
block1 (100)
    on left: 107 108, on right: 106 108


state 0

    0 $accept: . qcl_input $end
    1 qcl_input: . top_symbol tokEOF
    2 top_symbol: . stmt
    3           | . def
    4           | . stmt top_symbol
    5           | . def top_symbol
    6           | . error '\n'
    7           | . error tokEOF
    8 const: . '(' const ',' const ')'
    9      | . '-' const
   10      | . tokCOMPLEX_COORD
   11      | . tokCONSTI
   12      | . tokTRUE
   13      | . tokFALSE
   14      | . tokSTRINGCONST
   15      | . '(' error ')'
   16      | . error
   17 expr: . const
   18     | . identifier '[' expr ':' expr ']'
   19     | . identifier '[' expr tokMULTDOT expr ']'
   20     | . identifier '[' expr '\\' expr ']'
   21     | . identifier '[' expr ']'
   22     | . identifier
   23     | . identifier '(' expr1 ')'
   24     | . '(' expr ')'
   25     | . '#' expr
   26     | . expr '^' expr
   27     | . '-' expr
   28     | . expr '*' expr
   29     | . expr '/' expr
   30     | . expr tokMOD expr
   31     | . expr '+' expr
   32     | . expr '-' expr
   33     | . expr '&' expr
   34     | . expr tokEQ expr
   35     | . expr tokNEQ expr
   36     | . expr '<' expr
   37     | . expr tokLORE expr
   38     | . expr '>' expr
   39     | . expr tokGORE expr
   40     | . tokNOT expr
   41     | . expr tokAND expr
   42     | . expr tokOR expr
   43     | . expr tokXOR expr
   47 identifier: . tokID
   48 stmt: . '!' identifier '(' expr1 ')' ';'
   49     | . identifier '(' expr1 ')' ';'
   50     | . identifier '=' expr ';'
   51     | . expr tokLEFTARROW expr ';'
   52     | . expr tokRIGHTARROW expr ';'
   53     | . expr tokBOTHARROW expr ';'
   54     | . tokFOR identifier '=' expr tokTO expr tokSTEP expr block
   55     | . tokFOR identifier '=' expr tokTO expr block
   56     | . tokWHILE expr block
   57     | . block tokUNTIL expr ';'
   58     | . tokIF expr block tokELSE block
   59     | . tokIF expr block
   60     | . tokRETURN expr ';'
   61     | . tokINPUT identifier ';'
   62     | . tokINPUT expr ',' identifier ';'
   63     | . tokPRINT expr1 ';'
   64     | . tokEXIT expr ';'
   65     | . tokEXIT ';'
   66     | . tokMEASURE expr ';'
   67     | . tokMEASURE expr ',' identifier ';'
   68     | . tokRESET ';'
   69     | . tokDUMP ';'
   70     | . tokDUMP expr ';'
   71     | . tokLOAD ';'
   72     | . tokLOAD expr ';'
   73     | . tokSAVE ';'
   74     | . tokSAVE expr ';'
   75     | . tokSHELL ';'
   76     | . stmt ";"
   77 type: . tokBOOLEAN
   78     | . tokINT
   79     | . tokREAL
   80     | . tokCOMPLEX
   81     | . tokSTRING
   82     | . tokQUREG
   83     | . tokQUVOID
   84     | . tokQUCONST
   85     | . tokQUSCRATCH
   86 const_def: . tokCONST identifier '=' expr ';'
   87 var_def: . type identifier '[' expr ']' ';'
   88        | . type identifier '=' expr ';'
   89        | . type identifier ';'
   98 def: . const_def
   99    | . var_def
  100    | . type identifier arg_list body
  101    | . tokPROCEDURE identifier arg_list body
  102    | . tokOPERATOR identifier arg_list body
  103    | . tokQUFUNCT identifier arg_list body
  104    | . tokEXTERN tokOPERATOR identifier arg_list
  105    | . tokEXTERN tokQUFUNCT identifier arg_list
  106 block: . '{' block1 '}'

    error             shift, and go to state 1
    tokBOOLEAN        shift, and go to state 2
    tokCOMPLEX        shift, and go to state 3
    tokCOMPLEX_COORD  shift, and go to state 4
    tokCONST          shift, and go to state 5
    tokCONSTI         shift, and go to state 6
    tokDUMP           shift, and go to state 7
    tokEXIT           shift, and go to state 8
    tokEXTERN         shift, and go to state 9
    tokFALSE          shift, and go to state 10
    tokFOR            shift, and go to state 11
    tokID             shift, and go to state 12
    tokIF             shift, and go to state 13
    tokINPUT          shift, and go to state 14
    tokINT            shift, and go to state 15
    tokLOAD           shift, and go to state 16
    tokMEASURE        shift, and go to state 17
    tokNOT            shift, and go to state 18
    tokOPERATOR       shift, and go to state 19
    tokPRINT          shift, and go to state 20
    tokPROCEDURE      shift, and go to state 21
    tokQUCONST        shift, and go to state 22
    tokQUFUNCT        shift, and go to state 23
    tokQUREG          shift, and go to state 24
    tokQUSCRATCH      shift, and go to state 25
    tokQUVOID         shift, and go to state 26
    tokREAL           shift, and go to state 27
    tokRESET          shift, and go to state 28
    tokRETURN         shift, and go to state 29
    tokSAVE           shift, and go to state 30
    tokSHELL          shift, and go to state 31
    tokSTRING         shift, and go to state 32
    tokSTRINGCONST    shift, and go to state 33
    tokTRUE           shift, and go to state 34
    tokWHILE          shift, and go to state 35
    '#'               shift, and go to state 36
    '('               shift, and go to state 37
    '-'               shift, and go to state 38
    '!'               shift, and go to state 39
    '{'               shift, and go to state 40

    qcl_input   go to state 41
    top_symbol  go to state 42
    const       go to state 43
    expr        go to state 44
    identifier  go to state 45
    stmt        go to state 46
    type        go to state 47
    const_def   go to state 48
    var_def     go to state 49
    def         go to state 50
    block       go to state 51


state 1

    6 top_symbol: error . '\n'
    7           | error . tokEOF
   16 const: error .  [tokAND, tokBOTHARROW, tokEQ, tokGORE, tokLEFTARROW, tokLORE, tokMOD, tokNEQ, tokOR, tokRIGHTARROW, tokXOR, '<', '>', '&', '/', '*', '^', '-', '+']

    tokEOF  shift, and go to state 52
    '\n'    shift, and go to state 53

    $default  reduce using rule 16 (const)


state 2

   77 type: tokBOOLEAN .

    $default  reduce using rule 77 (type)


state 3

   80 type: tokCOMPLEX .

    $default  reduce using rule 80 (type)


state 4

   10 const: tokCOMPLEX_COORD .

    $default  reduce using rule 10 (const)


state 5

   47 identifier: . tokID
   86 const_def: tokCONST . identifier '=' expr ';'

    tokID  shift, and go to state 12

    identifier  go to state 54


state 6

   11 const: tokCONSTI .

    $default  reduce using rule 11 (const)


state 7

    8 const: . '(' const ',' const ')'
    9      | . '-' const
   10      | . tokCOMPLEX_COORD
   11      | . tokCONSTI
   12      | . tokTRUE
   13      | . tokFALSE
   14      | . tokSTRINGCONST
   15      | . '(' error ')'
   16      | . error
   17 expr: . const
   18     | . identifier '[' expr ':' expr ']'
   19     | . identifier '[' expr tokMULTDOT expr ']'
   20     | . identifier '[' expr '\\' expr ']'
   21     | . identifier '[' expr ']'
   22     | . identifier
   23     | . identifier '(' expr1 ')'
   24     | . '(' expr ')'
   25     | . '#' expr
   26     | . expr '^' expr
   27     | . '-' expr
   28     | . expr '*' expr
   29     | . expr '/' expr
   30     | . expr tokMOD expr
   31     | . expr '+' expr
   32     | . expr '-' expr
   33     | . expr '&' expr
   34     | . expr tokEQ expr
   35     | . expr tokNEQ expr
   36     | . expr '<' expr
   37     | . expr tokLORE expr
   38     | . expr '>' expr
   39     | . expr tokGORE expr
   40     | . tokNOT expr
   41     | . expr tokAND expr
   42     | . expr tokOR expr
   43     | . expr tokXOR expr
   47 identifier: . tokID
   69 stmt: tokDUMP . ';'
   70     | tokDUMP . expr ';'

    error             shift, and go to state 55
    tokCOMPLEX_COORD  shift, and go to state 4
    tokCONSTI         shift, and go to state 6
    tokFALSE          shift, and go to state 10
    tokID             shift, and go to state 12
    tokNOT            shift, and go to state 18
    tokSTRINGCONST    shift, and go to state 33
    tokTRUE           shift, and go to state 34
    '#'               shift, and go to state 36
    '('               shift, and go to state 37
    '-'               shift, and go to state 38
    ';'               shift, and go to state 56

    const       go to state 43
    expr        go to state 57
    identifier  go to state 58


state 8

    8 const: . '(' const ',' const ')'
    9      | . '-' const
   10      | . tokCOMPLEX_COORD
   11      | . tokCONSTI
   12      | . tokTRUE
   13      | . tokFALSE
   14      | . tokSTRINGCONST
   15      | . '(' error ')'
   16      | . error
   17 expr: . const
   18     | . identifier '[' expr ':' expr ']'
   19     | . identifier '[' expr tokMULTDOT expr ']'
   20     | . identifier '[' expr '\\' expr ']'
   21     | . identifier '[' expr ']'
   22     | . identifier
   23     | . identifier '(' expr1 ')'
   24     | . '(' expr ')'
   25     | . '#' expr
   26     | . expr '^' expr
   27     | . '-' expr
   28     | . expr '*' expr
   29     | . expr '/' expr
   30     | . expr tokMOD expr
   31     | . expr '+' expr
   32     | . expr '-' expr
   33     | . expr '&' expr
   34     | . expr tokEQ expr
   35     | . expr tokNEQ expr
   36     | . expr '<' expr
   37     | . expr tokLORE expr
   38     | . expr '>' expr
   39     | . expr tokGORE expr
   40     | . tokNOT expr
   41     | . expr tokAND expr
   42     | . expr tokOR expr
   43     | . expr tokXOR expr
   47 identifier: . tokID
   64 stmt: tokEXIT . expr ';'
   65     | tokEXIT . ';'

    error             shift, and go to state 55
    tokCOMPLEX_COORD  shift, and go to state 4
    tokCONSTI         shift, and go to state 6
    tokFALSE          shift, and go to state 10
    tokID             shift, and go to state 12
    tokNOT            shift, and go to state 18
    tokSTRINGCONST    shift, and go to state 33
    tokTRUE           shift, and go to state 34
    '#'               shift, and go to state 36
    '('               shift, and go to state 37
    '-'               shift, and go to state 38
    ';'               shift, and go to state 59

    const       go to state 43
    expr        go to state 60
    identifier  go to state 58


state 9

  104 def: tokEXTERN . tokOPERATOR identifier arg_list
  105    | tokEXTERN . tokQUFUNCT identifier arg_list

    tokOPERATOR  shift, and go to state 61
    tokQUFUNCT   shift, and go to state 62


state 10

   13 const: tokFALSE .

    $default  reduce using rule 13 (const)


state 11

   47 identifier: . tokID
   54 stmt: tokFOR . identifier '=' expr tokTO expr tokSTEP expr block
   55     | tokFOR . identifier '=' expr tokTO expr block

    tokID  shift, and go to state 12

    identifier  go to state 63


state 12

   47 identifier: tokID .

    $default  reduce using rule 47 (identifier)


state 13

    8 const: . '(' const ',' const ')'
    9      | . '-' const
   10      | . tokCOMPLEX_COORD
   11      | . tokCONSTI
   12      | . tokTRUE
   13      | . tokFALSE
   14      | . tokSTRINGCONST
   15      | . '(' error ')'
   16      | . error
   17 expr: . const
   18     | . identifier '[' expr ':' expr ']'
   19     | . identifier '[' expr tokMULTDOT expr ']'
   20     | . identifier '[' expr '\\' expr ']'
   21     | . identifier '[' expr ']'
   22     | . identifier
   23     | . identifier '(' expr1 ')'
   24     | . '(' expr ')'
   25     | . '#' expr
   26     | . expr '^' expr
   27     | . '-' expr
   28     | . expr '*' expr
   29     | . expr '/' expr
   30     | . expr tokMOD expr
   31     | . expr '+' expr
   32     | . expr '-' expr
   33     | . expr '&' expr
   34     | . expr tokEQ expr
   35     | . expr tokNEQ expr
   36     | . expr '<' expr
   37     | . expr tokLORE expr
   38     | . expr '>' expr
   39     | . expr tokGORE expr
   40     | . tokNOT expr
   41     | . expr tokAND expr
   42     | . expr tokOR expr
   43     | . expr tokXOR expr
   47 identifier: . tokID
   58 stmt: tokIF . expr block tokELSE block
   59     | tokIF . expr block

    error             shift, and go to state 55
    tokCOMPLEX_COORD  shift, and go to state 4
    tokCONSTI         shift, and go to state 6
    tokFALSE          shift, and go to state 10
    tokID             shift, and go to state 12
    tokNOT            shift, and go to state 18
    tokSTRINGCONST    shift, and go to state 33
    tokTRUE           shift, and go to state 34
    '#'               shift, and go to state 36
    '('               shift, and go to state 37
    '-'               shift, and go to state 38

    const       go to state 43
    expr        go to state 64
    identifier  go to state 58


state 14

    8 const: . '(' const ',' const ')'
    9      | . '-' const
   10      | . tokCOMPLEX_COORD
   11      | . tokCONSTI
   12      | . tokTRUE
   13      | . tokFALSE
   14      | . tokSTRINGCONST
   15      | . '(' error ')'
   16      | . error
   17 expr: . const
   18     | . identifier '[' expr ':' expr ']'
   19     | . identifier '[' expr tokMULTDOT expr ']'
   20     | . identifier '[' expr '\\' expr ']'
   21     | . identifier '[' expr ']'
   22     | . identifier
   23     | . identifier '(' expr1 ')'
   24     | . '(' expr ')'
   25     | . '#' expr
   26     | . expr '^' expr
   27     | . '-' expr
   28     | . expr '*' expr
   29     | . expr '/' expr
   30     | . expr tokMOD expr
   31     | . expr '+' expr
   32     | . expr '-' expr
   33     | . expr '&' expr
   34     | . expr tokEQ expr
   35     | . expr tokNEQ expr
   36     | . expr '<' expr
   37     | . expr tokLORE expr
   38     | . expr '>' expr
   39     | . expr tokGORE expr
   40     | . tokNOT expr
   41     | . expr tokAND expr
   42     | . expr tokOR expr
   43     | . expr tokXOR expr
   47 identifier: . tokID
   61 stmt: tokINPUT . identifier ';'
   62     | tokINPUT . expr ',' identifier ';'
